add settings page and style

--- a/index.html
+++ b/index.html
@@ -44,35 +44,35 @@
             <div class="box-img">
               <img src="assets/img/photo2.png" alt="Photo 2">
             </div>
-            <h2 class="name" data-office='Product owner'>Bill Mahoney</h2>
+            <h2 class="name" data-office='Art director'>Saba Cabrera</h2>
           </div>
 
           <div class="team-item">
             <div class="box-img">
               <img src="assets/img/photo3.png" alt="Photo 3">
             </div>
-            <h2 class="name" data-office='Product owner'>Bill Mahoney</h2>
+            <h2 class="name" data-office='Tech Lead'>Shae Le</h2>
           </div>
 
           <div class="team-item">
             <div class="box-img">
               <img src="assets/img/photo4.png" alt="Photo 4">
             </div>
-            <h2 class="name" data-office='Product owner'>Bill Mahoney</h2>
+            <h2 class="name" data-office='Tech Lead'>Skylah Lu</h2>
           </div>
 
           <div class="team-item">
             <div class="box-img">
               <img src="assets/img/photo5.png" alt="Photo 5">
             </div>
-            <h2 class="name" data-office='Product owner'>Bill Mahoney</h2>
+            <h2 class="name" data-office='Developer'>Griff Richards</h2>
           </div>
 
           <div class="team-item">
             <div class="box-img">
               <img src="assets/img/photo6.png" alt="Photo 1">
             </div>
-            <h2 class="name" data-office='Product owner'>Bill Mahoney</h2>
+            <h2 class="name" data-office='DEverloper'>Stan John</h2>
           </div>
         </div>
       </div>
